--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,8 @@
 %table#movies
   %thead
     %tr
-      %th#title_header= link_to 'Movie Title', movie_path
+      %th#title_header
+      = link_to 'Movie Title', movie_path
       %th Rating
       %th Release Date
       %th More Info
