--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,8 +4,7 @@
 %table#movies
   %thead
     %tr
-      %th#title_header
-      = link_to 'Movie Title', movie_path
+      %th#title_header Movie Title
       %th Rating
       %th Release Date
       %th More Info
