--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th#title_header Movie Title
+      %th#title_header= link_to "Movie Title", new_movie_path
       %th Rating
-      %th Release Date
+      %th#release_date_header Release Date
       %th More Info
   %tbody
     - @movies.each do |movie|
