--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th#title_header= link_to "Movie Title", movies_path(:order => "title")
+      %th{:class => ("hilite" if @sortby == "title")}= link_to "Movie Title", movies_path(:order => "title"), :id => 'title_header'
       %th Rating
-      %th#release_date_header= link_to "Release Date", movies_path(:order => "release_date")
+      %th{:class => ("hilite" if @sortby == "release_date")}= link_to "Release Date", movies_path(:order => "release_date"), :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
