--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -2,6 +2,13 @@
 %h1 All Movies
 
 %table#movies
+= form_tag movies_path, :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]"
+  = submit_tag 'Refresh'
+  
   %thead
     %tr
       %th{:class => ("hilite" if @sortby == "title"), :id => 'title_header'}= link_to "Movie Title", movies_path(:order => "title")
